# uaiDiffusers

./: 404.html  base64image.json  createWheel.bat  gen_ref_pages.py  index.html  installWheelBrain.bat  installWheelProgramData.bat  mkdocs.yml  objects.inv  setup.cfg  setup.py  testImport.py
.github/workflows/: ci.yml
classes/: index.html
docs/: classes.md  hair.md  index.md  pipelines_merger.md  sadtalk.md  uaiDiffusers.md
examples/: examples.ipynb
hair/: index.html
pipelines_merger/: index.html
sadtalk/: index.html
search/: search_index.json
uaiDiffusers/: __init__.py  constants.py  datasets.py  hair.py  index.html  jobs.py  loadedAIPipelines.py  minified.py  uaiDiffusers.py
uaiDiffusers/classes/: mediaRequestBase64.py
uaiDiffusers/common/: __init__.py  imageRequest.py  utils.py
uaiDiffusers/media/: __init__.py  mediaRequestBase.py
uaiDiffusers/networking/: RESTRouter.py  __init__.py
uaiDiffusers/pipelines/: __init__.py  depthPipe.py  facefixgan.py  jsonParse.py  merger.py  nestedNamespace.py  stableDiffusionManager.py  video.py
uaiDiffusers/sadTalk/: __init__.py  sadTalk.py
uaiDiffusers/scene/: __init__.py  blenderTracker.py  scene.py
