[metadata]
name = uaiDiffusers
version = 1.1.1
author = Justin Jaro
author_email = info@uai.contact
url = https://uai.software
description = uaiDiffusers
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
# install_requires = 
#     model
#     environment
#     data
