[metadata]
name = uaiDiffusers
version = 1.1.4
author = Justin Jaro
author_email = info@uai.contact
url = https://uai.software
description = uaiDiffusers
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
[tool.setuptools.packages]
find = {uaiDiffusers}  # Scan the project directory with the default parameters

[options]
packages = find:

